toml-pretty-deser/compilation_failure_tests/absorb_remaining_multiple.stderr
error: only one field can have #[tpd(absorb_remaining)]
  --> compilation_failure_tests/absorb_remaining_multiple.rs:12:5
   |
12 |     extra2: IndexMap<String, String>,
   |     ^^^^^^

warning: unused import: `indexmap::IndexMap`
 --> compilation_failure_tests/absorb_remaining_multiple.rs:2:5
  |
2 | use indexmap::IndexMap;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
